--- a/课设3/课设3.vbproj
+++ b/课设3/课设3.vbproj
@@ -119,6 +119,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MusicDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MusicDataSet.vb">
+      <DependentUpon>MusicDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -133,6 +136,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="register.Designer.vb">
+      <DependentUpon>register.vb</DependentUpon>
+    </Compile>
+    <Compile Include="register.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="registerwarning.Designer.vb">
+      <DependentUpon>registerwarning.vb</DependentUpon>
+    </Compile>
+    <Compile Include="registerwarning.vb">
+      <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +165,12 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="register.resx">
+      <DependentUpon>register.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="registerwarning.resx">
+      <DependentUpon>registerwarning.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
